--- a/src/players/views/html/edit-player.page.css
+++ b/src/players/views/html/edit-player.page.css
@@ -20,7 +20,7 @@
     grid-template-rows: subgrid;
 
     &:not(:has(button)) {
-      color: theme(colors.abru.light.50);
+      color: var(--color-abru-light-50);
     }
   }
 }
