--- a/src/admin/views/html/style.css
+++ b/src/admin/views/html/style.css
@@ -1,8 +1,8 @@
 .admin-panel-set {
-  background: theme(colors.abru.dark.25);
+  background: var(--color-abru-dark-25);
   border-radius: 16px;
   padding: 24px;
-  color: theme(colors.abru.light.50);
+  color: var(--color-abru-light-50);
 
   .form-checkbox {
     margin-bottom: 16px;
@@ -12,7 +12,7 @@
     }
 
     .description {
-      color: theme(colors.abru.light.75);
+      color: var(--color-abru-light-75);
       font-size: 12px;
       margin-left: 22px;
     }
