--- a/src/games/views/html/game-list.css
+++ b/src/games/views/html/game-list.css
@@ -27,10 +27,10 @@
 
     padding: 8px;
 
-    color: theme('colors.abru.light.75');
+    color: var(--color-abru-light-75);
     font-weight: 500;
 
-    background: theme('colors.abru.light.15 / 85%');
+    background: --alpha(var(--color-abru-light-15) / 50%);
 
     overflow: hidden;
     border-radius: 8px;
@@ -46,22 +46,22 @@
     @media screen(xl) {
       height: 80px;
 
-      background: theme('colors.abru.light.15');
+      background: var(--color-abru-light-15);
       background: linear-gradient(
         90deg,
-        theme('colors.abru.light.15') 35%,
-        theme('colors.transparent') 90%
+        var(--color-abru-light-15) 35%,
+        var(--color-transparent) 90%
       );
     }
 
     &:hover {
-      background: theme('colors.abru.light.15 / 90%');
+      background: --alpha(var(--color-abru-light-15) / 90%);
 
       @media screen(xl) {
         background: linear-gradient(
           90deg,
-          lighten(theme('colors.abru.light.15'), 3%) 35%,
-          theme('colors.transparent') 90%
+          color-mix(in hsl, var(--color-abru-light-15), white 3%) 35%,
+          var(--color-transparent) 90%
         );
       }
     }
@@ -143,7 +143,7 @@
       }
 
       &--blu {
-        background-color: theme('colors.team-blu');
+        background-color: var(--color-team-blu);
         text-transform: uppercase;
         order: 5;
 
@@ -153,7 +153,7 @@
       }
 
       &--red {
-        background-color: theme('colors.team-red');
+        background-color: var(--color-team-red);
         text-transform: uppercase;
         order: 6;
 
@@ -164,14 +164,14 @@
 
       &--interrupted {
         @apply col-span-2;
-        background-color: theme('colors.abru.light.25');
+        background-color: var(--color-abru-light-25);
         justify-self: stretch;
       }
 
       &--launching {
         @apply col-span-2;
-        background-color: theme('colors.alert');
-        color: theme('colors.abru.light.3');
+        background-color: var(--color-alert);
+        color: var(--color-abru-light-3);
         justify-self: stretch;
       }
     }
