--- a/src/html/styles/flash-messages.css
+++ b/src/html/styles/flash-messages.css
@@ -1,77 +1,79 @@
-@utility flash-messages {
-  position: fixed;
-  bottom: 48px;
-  left: 50%;
-  transform: translate(-50%, 0);
+@layer components {
+  .flash-messages {
+    position: fixed;
+    bottom: 48px;
+    left: 50%;
+    transform: translate(-50%, 0);
 
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 12px;
-
-  .message {
-    width: 640px;
-    border-radius: 4px;
-    box-shadow: 0px 29px 37px 3px rgba(0, 0, 0, 0.4);
     display: flex;
-    flex-direction: column;
-    padding: 0;
+    flex-flow: column nowrap;
+    gap: 12px;
 
-    .content {
-      display: flex;
-      flex-flow: row nowrap;
-      align-items: center;
-      justify-content: center;
-      padding: 12px 24px;
-      font-weight: 700;
-      font-size: 16px;
-      color: var(--color-ash);
-    }
-
-    progress[value] {
-      appearance: none;
-      border: none;
-      overflow: hidden;
-      border-radius: 0 0 4px 4px;
+    .message {
       width: 640px;
-      height: 4px;
-    }
+      border-radius: 4px;
+      box-shadow: 0px 29px 37px 3px rgba(0, 0, 0, 0.4);
+      display: flex;
+      flex-direction: column;
+      padding: 0;
 
-    &.success {
-      background-color: #0a955b;
+      .content {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+        padding: 12px 24px;
+        font-weight: 700;
+        font-size: 16px;
+        color: var(--color-ash);
+      }
 
       progress[value] {
-        background-color: #087749;
+        appearance: none;
+        border: none;
+        overflow: hidden;
+        border-radius: 0 0 4px 4px;
+        width: 640px;
+        height: 4px;
+      }
 
-        &::-webkit-progress-bar {
-          background: #087749;
-        }
+      &.success {
+        background-color: #0a955b;
 
-        &::-webkit-progress-value {
-          background: #5db08d;
-        }
+        progress[value] {
+          background-color: #087749;
 
-        &::-moz-progress-bar {
-          background: #5db08d;
+          &::-webkit-progress-bar {
+            background: #087749;
+          }
+
+          &::-webkit-progress-value {
+            background: #5db08d;
+          }
+
+          &::-moz-progress-bar {
+            background: #5db08d;
+          }
         }
       }
-    }
 
-    &.error {
-      background-color: #950a0a;
+      &.error {
+        background-color: #950a0a;
 
-      progress[value] {
-        background-color: #770808;
+        progress[value] {
+          background-color: #770808;
 
-        &::-webkit-progress-bar {
-          background: #770808;
-        }
+          &::-webkit-progress-bar {
+            background: #770808;
+          }
 
-        &::-webkit-progress-value {
-          background: #b05d5d;
-        }
+          &::-webkit-progress-value {
+            background: #b05d5d;
+          }
 
-        &::-moz-progress-bar {
-          background: #b05d5d;
+          &::-moz-progress-bar {
+            background: #b05d5d;
+          }
         }
       }
     }
