--- a/src/html/styles/tooltip.css
+++ b/src/html/styles/tooltip.css
@@ -1,51 +1,53 @@
-@utility tooltip {
-  *:has(> &) {
-    position: relative;
+@layer components {
+  .tooltip {
+    *:has(> &) {
+      position: relative;
 
-    &:hover .tooltip {
-      visibility: visible;
-      opacity: 1;
+      &:hover .tooltip {
+        visibility: visible;
+        opacity: 1;
+      }
     }
-  }
-  visibility: hidden;
-  min-width: 120px;
-  background-color: var(--color-abru-dark-6);
-  color: var(--color-abru-light-75);
-  text-align: center;
-  padding: 5px 8px;
-  border-radius: 6px;
+    visibility: hidden;
+    min-width: 120px;
+    background-color: var(--color-abru-dark-6);
+    color: var(--color-abru-light-75);
+    text-align: center;
+    padding: 5px 8px;
+    border-radius: 6px;
 
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-
-  opacity: 0;
-  transition: opacity 0.3s;
-  box-shadow:
-    0 4px 6px -1px rgb(0 0 0 / 0.1),
-    0 2px 4px -2px rgb(0 0 0 / 0.1);
-
-  &::after {
-    content: '';
     position: absolute;
-    top: 100%;
+    z-index: 1;
+    bottom: 125%;
     left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: var(--color-abru-dark-6) transparent transparent transparent;
-  }
+    transform: translateX(-50%);
 
-  &.tooltip--bottom {
-    bottom: auto;
-    top: 125%;
+    opacity: 0;
+    transition: opacity 0.3s;
+    box-shadow:
+      0 4px 6px -1px rgb(0 0 0 / 0.1),
+      0 2px 4px -2px rgb(0 0 0 / 0.1);
 
     &::after {
-      top: auto;
-      bottom: 100%;
-      border-color: transparent transparent var(--color-abru-dark-6) transparent;
+      content: '';
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      margin-left: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: var(--color-abru-dark-6) transparent transparent transparent;
+    }
+
+    &.tooltip--bottom {
+      bottom: auto;
+      top: 125%;
+
+      &::after {
+        top: auto;
+        bottom: 100%;
+        border-color: transparent transparent var(--color-abru-dark-6) transparent;
+      }
     }
   }
 }
