--- a/src/queue/views/html/queue-slot.css
+++ b/src/queue/views/html/queue-slot.css
@@ -1,6 +1,6 @@
 .queue-slot {
-  background-color: theme(colors.abru.light.30);
-  color: theme(colors.abru.light.50);
+  background-color: var(--color-abru-light-30);
+  color: var(--color-abru-light-50);
   height: 58px;
   border-radius: 8px;
 
@@ -14,17 +14,17 @@
     align-items: center;
     justify-content: center;
 
-    background-color: theme(colors.abru.light.30);
-    color: theme(colors.abru.light.30);
+    background-color: var(--color-abru-light-30);
+    color: var(--color-abru-light-30);
     border-radius: 8px;
 
     &:has(> svg.icon-tabler-lock) {
-      color: theme(colors.abru.light.35);
+      color: var(--color-abru-light-35);
     }
 
     &:hover:enabled {
-      background-color: theme(colors.abru.light.25);
-      color: theme(colors.abru.light.60);
+      background-color: var(--color-abru-light-25);
+      color: var(--color-abru-light-60);
     }
   }
 
@@ -34,7 +34,7 @@
     display: grid;
     grid-template-columns: 42px 1fr 42px;
     align-items: center;
-    background-color: theme(colors.abru.light.60);
+    background-color: var(--color-abru-light-60);
     border-radius: 8px;
 
     img {
@@ -49,7 +49,7 @@
       text-align: center;
       font-size: 20px;
       font-weight: 700;
-      color: theme(colors.abru.dark.3);
+      color: var(--color-abru-dark-3);
       margin: 0 4px;
 
       &:hover {
@@ -58,7 +58,7 @@
     }
 
     &:has(.leave-queue-button) {
-      background-color: theme(colors.abru.light.75);
+      background-color: var(--color-abru-light-75);
     }
 
     &[data-player-ready='true'] {
@@ -78,11 +78,11 @@
       width: 34px;
       border-radius: 4px;
 
-      background-color: theme(colors.abru.light.30);
-      color: theme(colors.white);
+      background-color: var(--color-abru-light-30);
+      color: var(--color-white);
 
       &:hover:enabled {
-        background-color: theme(colors.abru.light.35);
+        background-color: var(--color-abru-light-35);
       }
     }
 
@@ -108,8 +108,8 @@
         @apply transition-colors;
         @apply duration-75;
 
-        color: theme(colors.abru.dark.20);
-        background-color: theme(colors.abru.light.75);
+        color: var(--color-abru-dark-20);
+        background-color: var(--color-abru-light-75);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -122,16 +122,16 @@
         border-radius: 4px;
 
         &:hover {
-          background-color: theme(colors.abru.light.70);
+          background-color: var(--color-abru-light-70);
         }
       }
 
       input:checked ~ .mark {
-        color: theme(colors.accent.600);
+        color: var(--color-accent-600);
       }
 
       input:disabled ~ .mark {
-        color: theme(colors.abru.light.60);
+        color: var(--color-abru-light-60);
       }
     }
   }
