--- a/src/queue/views/html/sidebar.css
+++ b/src/queue/views/html/sidebar.css
@@ -3,7 +3,7 @@
   height: 100%;
   max-height: 100%;
   border-radius: 8px;
-  background-color: theme(colors.abru.dark.6);
+  background-color: var(--color-abru-dark-6);
   padding: 8px;
   display: none;
 
@@ -27,7 +27,7 @@
       gap: 4px;
       padding-bottom: 8px;
 
-      color: theme(colors.abru.light.75);
+      color: var(--color-abru-light-75);
       font-size: 14px;
       font-style: normal;
       font-weight: 700;
@@ -40,7 +40,7 @@
         bottom: 0;
         width: 66px;
         left: calc(50% - 33px);
-        border-bottom: 2px solid theme(colors.accent.DEFAULT);
+        border-bottom: 2px solid var(--color-accent);
       }
     }
   }
