--- a/src/html/styles/main.css
+++ b/src/html/styles/main.css
@@ -79,7 +79,8 @@
   }
 }
 
-/*
+@layer base {
+  /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
   looks the same as it did with Tailwind CSS v3.
@@ -87,7 +88,6 @@
   If we ever want to remove these styles, we need to add an explicit border
   color utility to any element that depends on these defaults.
 */
-@layer base {
   *,
   ::after,
   ::before,
@@ -95,10 +95,19 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentcolor);
   }
-}
 
-html {
-  scroll-behavior: smooth;
+  button:not(:disabled),
+  [role='button']:not(:disabled) {
+    cursor: pointer;
+  }
+
+  dialog {
+    margin: auto;
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
 }
 
 body {
