--- a/src/games/views/html/game-list.css
+++ b/src/games/views/html/game-list.css
@@ -1,3 +1,5 @@
+@reference '../../../html/styles/main.css';
+
 .game-list {
   display: grid;
   column-gap: 8px;
@@ -5,11 +7,11 @@
 
   grid-template-columns: 22px auto 1fr 1fr auto;
 
-  @media screen(sm) {
+  @media (width >= theme(--breakpoint-sm)) {
     grid-template-columns: 22px repeat(4, auto) 1fr 1fr;
   }
 
-  @media screen(xl) {
+  @media (width >= theme(--breakpoint-xl)) {
     grid-template-columns: 22px repeat(5, auto) 1fr;
   }
 
@@ -35,7 +37,7 @@
     overflow: hidden;
     border-radius: 8px;
 
-    @media screen(sm) {
+    @media (width >= theme(--breakpoint-sm)) {
       @apply col-span-7;
       @apply row-span-1;
 
@@ -43,7 +45,7 @@
       height: 60px;
     }
 
-    @media screen(xl) {
+    @media (width >= theme(--breakpoint-xl)) {
       height: 80px;
 
       background: var(--color-abru-light-15);
@@ -53,7 +55,7 @@
     &:hover {
       background: --alpha(var(--color-abru-light-15) / 90%);
 
-      @media screen(xl) {
+      @media (width >= theme(--breakpoint-xl)) {
         background: linear-gradient(
           90deg,
           color-mix(in hsl, var(--color-abru-light-15), white 3%) 35%,
@@ -66,7 +68,7 @@
       @apply row-span-3;
       order: 0;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         @apply row-span-1;
       }
     }
@@ -80,7 +82,7 @@
       font-weight: 500;
       line-height: normal;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         @apply row-span-1;
       }
     }
@@ -90,7 +92,7 @@
       order: 3;
       margin: 0 8px;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         @apply row-span-1;
         order: 2;
       }
@@ -101,12 +103,12 @@
       order: 2;
       white-space: nowrap;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         @apply col-span-1;
         order: 5;
       }
 
-      @media screen(xl) {
+      @media (width >= theme(--breakpoint-xl)) {
         justify-self: start;
         margin: 0 16px;
       }
@@ -117,12 +119,12 @@
       order: 4;
       white-space: nowrap;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         @apply col-span-1;
         order: 6;
       }
 
-      @media screen(xl) {
+      @media (width >= theme(--breakpoint-xl)) {
         justify-self: start;
       }
     }
@@ -134,7 +136,7 @@
       white-space: nowrap;
       order: 5;
 
-      @media screen(sm) {
+      @media (width >= theme(--breakpoint-sm)) {
         order: 3;
       }
 
@@ -143,7 +145,7 @@
         text-transform: uppercase;
         order: 5;
 
-        @media screen(sm) {
+        @media (width >= theme(--breakpoint-sm)) {
           order: 3;
         }
       }
@@ -153,7 +155,7 @@
         text-transform: uppercase;
         order: 6;
 
-        @media screen(sm) {
+        @media (width >= theme(--breakpoint-sm)) {
           order: 4;
         }
       }
