--- a/src/games/views/html/style.css
+++ b/src/games/views/html/style.css
@@ -1,3 +1,5 @@
+@reference '../../../html/styles/main.css';
+
 .game-page {
   display: grid;
   grid-template-areas:
@@ -9,7 +11,7 @@
     'gameEvents'
     'adminToolbox';
 
-  @media screen(lg) {
+  @media (width >= theme(--breakpoint-lg)) {
     grid-template-areas:
       'gameSummary  gameSummary     gameSummary     gameSummary'
       'scoreBlu     scoreBlu        scoreRed        scoreRed'
@@ -19,7 +21,7 @@
     grid-template-columns: 1fr auto auto 1fr;
   }
 
-  @media screen(xl) {
+  @media (width >= theme(--breakpoint-xl)) {
     grid-template-areas:
       'gameSummary scoreBlu     scoreBlu        scoreRed        scoreRed'
       'gameSummary slotsBlu     gameClassIcons  gameClassIcons  slotsRed'
@@ -43,7 +45,7 @@
 
     color: var(--color-ash);
 
-    @media screen(xl) {
+    @media (width >= theme(--breakpoint-xl)) {
       margin-top: 0;
     }
 
@@ -51,7 +53,7 @@
       grid-area: scoreBlu;
       background-color: var(--color-team-blu);
 
-      @media screen(lg) {
+      @media (width >= theme(--breakpoint-lg)) {
         border-radius: 8px 0 0 0;
         margin-right: 2px;
       }
@@ -61,7 +63,7 @@
       grid-area: scoreRed;
       background-color: var(--color-team-red);
 
-      @media screen(lg) {
+      @media (width >= theme(--breakpoint-lg)) {
         grid-template-areas: 'score teamName';
         border-radius: 0 8px 0 0;
         margin-left: 2px;
@@ -76,7 +78,7 @@
     align-items: center;
     padding: 4px 0;
 
-    @media screen(lg) {
+    @media (width >= theme(--breakpoint-lg)) {
       display: grid;
     }
   }
@@ -100,7 +102,7 @@
         'bluDemoman1'
         'bluMedic1';
 
-      @media screen(lg) {
+      @media (width >= theme(--breakpoint-lg)) {
         border-radius: 0 0 0 8px;
 
         .slot {
@@ -125,7 +127,7 @@
         'redDemoman1'
         'redMedic1';
 
-      @media screen(lg) {
+      @media (width >= theme(--breakpoint-lg)) {
         border-radius: 0 0 8px 0;
       }
     }
@@ -149,7 +151,7 @@
         background-color: var(--color-abru-light-60);
 
         .class-icon {
-          @media screen(lg) {
+          @media (width >= theme(--breakpoint-lg)) {
             display: none;
           }
         }
@@ -220,7 +222,7 @@
 }
 
 .game-summary-caption {
-  background: linear-gradient(180deg, var(--color-transparent) 35%, var(--color-abru-dark-29) 90%);
+  background: linear-gradient(180deg, transparent 35%, var(--color-abru-dark-29) 90%);
 
   .floating-label {
     background: color-mix(in srgb, var(--color-abru) 90%, transparent);
@@ -236,7 +238,7 @@
     line-height: 16px;
     font-weight: 700;
 
-    @apply shadow;
+    @apply shadow-sm;
 
     &:empty {
       display: none;
@@ -370,7 +372,7 @@
   flex-direction: column;
   gap: 8px;
 
-  @media screen(lg) {
+  @media (width >= theme(--breakpoint-lg)) {
     flex-direction: row;
     margin-top: 16px;
   }
