--- a/src/html/styles/admin-panel.css
+++ b/src/html/styles/admin-panel.css
@@ -1,5 +1,5 @@
 @layer components {
-  admin-panel-section {
+  .admin-panel-section {
     font-size: 14px;
     color: var(--color-abru-light-50);
     font-weight: 500;
